
project('EAWebKit_Full')

# Subprojects                                                                                          
# Note: Even though many of these may have system package variants, we will use the embedded ones as they may have some modifications.                                                                        
cairo = subdir('cairo/local-1.12.14')                                                            
coreallocator = subdir('coreallocator/local_1.04.05')                                            
dirtysock = subdir('DirtySDK/local_15.1.6.0.5')                                                  
EAAssert = subdir('EAAssert/local_1.05.11')                                                      
EABase = subdir('EABase/local_2.10.01')                                                          
EACallstack = subdir('EACallstack/local_2.03.04')                                                
EAIO = subdir('EAIO/local_3.01.13')                                                              
EAStdC = subdir('EASTL/local_3.16.05')                                                           
EAText = subdir('EAText/local_1.21.00')                                                          
EAThread = subdir('EAThread/local_1.33.04')                                                      
FreeType = subdir('FreeType/local_2.9.0.02')                                                     
JavaScriptCore = subdir('JavaScriptCore/local')                                                  
libjpegEAWebKit = subdir('libjpegEAWebKit/local-1.00.06-01')                                     
libpngEAWebKit = subdir('libpngEAWebKit/local-1.01.00-01')                                       
libxml2EAWebKit = subdir('libxml2EAWebKit/local-1.00.06')                                        
pixman = subdir('pixman/local-0.28.2')                                                           
PPMalloc = subdir('PPMalloc/local_1.26.11')                                                      
SQLiteEAWebKit = subdir('SQLiteEAWebKit/local')                                                  
WTF = subdir('WTF/local')                                                                        
zlibEAWebKit = subdir('zlibEAWebKit/local-1.2.5-7-01')  

