
project('EAWebKit_Full')

# Subprojects                                                                                          
# Note: Even though many of these may have system package variants, we will use the embedded ones as they may have some modifications.                                                                        
cairo = subproject('cairo')                                                            
coreallocator = subproject('coreallocator')                                            
dirtysock = subproject('DirtySDK')                                                  
EAAssert = subproject('EAAssert')                                                      
EABase = subproject('EABase')                                                          
EACallstack = subproject('EACallstack')                                                
EAIO = subproject('EAIO')                                                              
EAStdC = subproject('EASTL')                                                           
EAText = subproject('EAText')                                                          
EAThread = subproject('EAThread')                                                      
FreeType = subproject('FreeType')                                                     
JavaScriptCore = subproject('JavaScriptCore')                                                  
libjpegEAWebKit = subproject('libjpegEAWebKit')                                     
libpngEAWebKit = subproject('libpngEAWebKit')                                       
libxml2EAWebKit = subproject('libxml2EAWebKit')                                        
pixman = subproject('pixman')                                                           
PPMalloc = subproject('PPMalloc')                                                      
SQLiteEAWebKit = subproject('SQLiteEAWebKit')                                                  
WTF = subproject('WTF')                                                                        
zlibEAWebKit = subproject('zlibEAWebKit')  

